# sentinel

./: .editorconfig  Cargo.toml
.github/workflows/: release.yaml
src/: config.rs  email.rs  helpers.rs  main.rs  status.rs
