[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.56.0"
aws-sdk-ecs = "1.59.0"
aws-sdk-sesv2 = "1.58.0"
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
envy = "0.4.2"
lambda_runtime = "0.13.0"
medici-shared = { git = "https://github.com/medici-uy/rust-shared" }
reqwest = { version = "0.12.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
